# Education

./: .gitignore  Education.sln  README.md  education.sh  materials.tex  problems.tex  readme.md  resources.txt  summary.tex
home_tasks/07.02/: CMakeLists.txt  main.cpp  read_please  readme  sort_algorithms.hpp  tests.cpp
projects/examples/: CMakeLists.txt
projects/examples/project/: examples.vcxproj  examples.vcxproj.filters
projects/examples/source/: 01.01.01.tex  01.01.sup  01.01.tex  01.02.01.cpp  01.02.02.cpp  01.02.03.hpp  01.02.cpp  01.02.drawio  01.02.introduction.function.main.cpp  01.02.introduction.main.cpp  01.02.introduction.project.cpp  01.03.01.drawio  01.03.cpp  01.03.drawio  01.03.introduction.standard.cpp  01.04.cpp  01.04.hpp  02.01.01.cpp  02.01.02.cpp  02.01.03.cpp  02.01.04.cpp  02.01.05.cpp  02.01.06.cpp  02.01.07.cpp  02.01.08.cpp  02.01.09.cpp  02.01.10.cpp  02.01.cpp  02.01.statement.expression.variable.type.cpp  02.02.01.cpp  02.02.02.cpp  02.02.03.cpp  02.02.04.cpp  02.02.05.cpp  02.02.06.cpp  02.02.07.cpp  02.02.08.cpp  02.02.09.cpp  02.02.10.cpp  02.02.11.cpp  (+1341 more)
projects/examples/source/section_01/: standard_library.cpp
projects/examples/source/section_02/: bracket_sequences.cpp  combined_sort.cpp  combined_sorting.cpp  container_vector.cpp  dynamic_arrays.cpp  function_basics.cpp  iteration_basics.cpp  lvalue_references.cpp  operator_basics.cpp  optimized_search.cpp  pointer_basics.cpp  selection_basics.cpp  static_arrays.cpp  variable_basics.cpp
projects/examples/source/section_03/: associative_links.cpp  attorney_client.cpp  class_basics.cpp  class_hierarchies.cpp  class_optimizations.cpp  covariant_types.cpp  diamond_problem.drawio  expression_categories.drawio  friendship_basics.cpp  multiple_inheritance.cpp  operator_overloading.cpp  overload_resolution.cpp  paired_operators.cpp  rvalue_references.cpp  special_functions.cpp  structure_basics.cpp  types_identification.cpp  virtual_functions.cpp  virtual_operators.cpp
projects/examples/source/section_04/: class_templates.cpp  constexpr_basics.cpp  function_templates.cpp  hybrid_durations.cpp  metaprogramming.cpp  special_templates.cpp  template_friends.cpp  variadic_templates.cpp  variadic_traverse.cpp
projects/examples/source/section_05/: crtp_basics.cpp  crtp_counter.cpp  crtp_operators.cpp  mixin_basics.cpp  mixin_initializer.cpp  pattern_adapter.cpp  pattern_bridge.cpp  pattern_builder.cpp  pattern_composite.cpp  pattern_decorator.cpp  pattern_factory.cpp  pattern_memento.cpp  pattern_observer.cpp  pattern_prototype.cpp  pattern_singleton.cpp  pattern_state.cpp  pattern_strategy.cpp  pattern_template.cpp  polymorphism.cpp  spaceship_operator.cpp  variadic_bases.cpp
projects/examples/source/section_06/: custom_type_list.cpp  custom_type_traits.cpp  custom_typelist.cpp  perfect_forward.cpp  perfect_forwarding.cpp  project_header.hpp  project_main.cpp  project_module.cpp  project_source.cpp  sfinae_constructor.cpp  sfinae_enable_if.cpp  standard_concepts.cpp  types_inference.cpp
projects/examples/source/section_07/: custom_logger.cpp  empty_function.cpp  exception_basics.cpp  libraries_test.cpp  pimpl_idiom.cpp  precompiled.hpp  project_header.hpp  project_main.cpp  project_module.ixx  project_source.cpp
projects/examples/source/section_08/: boost_logger.cpp  boost_logging.cpp  boost_testing.cpp  custom_logger.cpp  custom_logger.hpp  errors_handling.cpp  exception_basics.cpp  google_benchmark.cpp  google_benchmarks.cpp  google_testing.cpp  heap_snapshots.cpp  logger_examples.cpp  optional_basics.cpp  processor_usage.cpp  smsd_driver_test.cpp  stack_interface.cpp  union_basics.cpp  variant_basics.cpp
projects/examples/source/section_09/: advanced_constants.cpp  advanced_literals.cpp  binary_gray_code.cpp  bitwise_operations.cpp  calendar_time_zones.cpp  chrono_management.cpp  complex_numbers.cpp  custom_allocators.drawio  floating_point_types.cpp  indian_algorithm.cpp  inscribed_simplex.cpp  iterator_facade.cpp  multiprecision_float.cpp  pattern_iterator.cpp  process_memory.drawio  random_generation.cpp  random_generation.drawio  smart_pointers.cpp  smsd_driver_test.cpp
projects/examples/source/section_10/: arena_adaptor.cpp  arena_allocator.cpp  bad_allocations.cpp  block_allocator.cpp  chain_allocator.cpp  circular_buffer.cpp  container_basics.cpp  container_memory.drawio  container_trees.cpp  custom_allocators.drawio  custom_optional.cpp  custom_shared_ptr.cpp  custom_unique_ptr.cpp  data_alignment.cpp  hash_table_basics.cpp  iterator_basics.cpp  iterator_facade.cpp  linear_allocator.cpp  memory_resource.cpp  noheap_allocator.cpp  pattern_facade.cpp  pattern_iterator.cpp  placement_new.cpp  pool_allocator.cpp  process_memory.drawio  red_black_trees.drawio  shared_from_this.cpp  smart_pointers.cpp  stack_allocator.cpp  standard_allocator.cpp
projects/examples/source/section_11/: circular_buffer.cpp  circular_buffer.drawio  common_subsequence.cpp  container_basics.cpp  container_lists.cpp  container_trees.cpp  custom_hash_equal.cpp  filling_multiarray.cpp  hash_functions.cpp  hash_table_basics.cpp  longest_subsequence.cpp  multidimensionals.cpp  multiple_interfaces.cpp  numeric_valarrays.cpp  pattern_flyweight.cpp  sorting_compare.cpp  stack_with_minimum.cpp  vector_bool_proxy.cpp  vectors_matrices.cpp
projects/examples/source/section_12/: 12.01.functors.1.cpp  12.09.algorithms.1.cpp  12.11.graphs.1.cpp  12.12.graphs.2.drawio  advanced_visitors.cpp  algorithms_on_graphs.cpp  algorithms_on_ranges.cpp  algoritms_on_ranges.cpp  breadth_first_search.cpp  depth_first_search.cpp  dijkstra_algorithm.cpp  directed_weighted.drawio  (+10 more)
projects/library_v1/: CMakeLists.txt
projects/library_v1/project/: library_v1.vcxproj  library_v1.vcxproj.filters
projects/library_v1/source/: 06.03.02.hpp  06.03.03.cpp  06.18.hpp  06.19.cpp  06.19.hpp  06.20.cpp  library.cpp  library.hpp
projects/library_v2/: CMakeLists.txt
projects/library_v2/project/: library_v2.vcxproj  library_v2.vcxproj.filters
projects/library_v2/source/: 06.03.04.cpp  06.20.cpp  06.21.cpp  library.cpp
(+306 files in other folders)
